...
    <string name="app_name">670GroupProject</string>

    <string name="loginError">Please enter a properly formatted email and a non-blank password</string>
    <string name="ok">ok</string>

    <!-- Login Page -->
    <string name="loginActivityTextViewLogin">Login</string>
    <string name="loginActivityEditTextHintLogin">Login Name</string>
    <string name="loginActivityTextViewPassword">Password</string>
    <string name="loginActivityCheckboxRememberMe">Remember Me</string>
    <string name="loginActivityButtonLogin">login</string>
    <string name="loginActivityButtonRegister">register</string>
    <!-- Registration Page -->
    <string name="registerActivityTextViewLoginText">Enter Email Address</string>
    <string name="registerActivityEditTextEmailAddress">Email Address</string>
    <string name="registerActivityTextViewPassword">Enter Password</string>
    <string name="registerActivityEditTextPassword">Password</string>
    <string name="registerActivityTextViewRePassword">Re Enter Password</string>
    <string name="registerActivityEditTextRePassword">Re Password</string>
    <string name="registerActivityButtonRegister">Register Account</string>
    <string name="registerActivityButtonBack">Back</string>
    <!-- Settings Page -->
    <string name="settingsActivityTextViewTitle">Settings</string>
    <string name="settingsActivityTextViewBloodSugarLevelUnits">Blood Sugar Level Units</string>
    <string name="settingsActivityTextViewBloodSugarLevelUnits1st">mmol/L</string>
    <string name="settingsActivityTextViewBloodSugarLevelUnits2nd">mg/dL</string>
...
    <string name="aboutMe">
        This application is created by Darryl Bedford, Josh Barber, Ali Himada, Vision Paudel, and Fraser Gray-Smith.\n
        This is version number 0.1\n
        Make sure you register before trying to login! Once you are in, start adding your diary entries. Use the toolbar at the top for stats and settings.\n
        Once you are signed in, press any of the diary buttons at the top of the main page (ex: Food, Blood Sugar) to see your diary entries for the day displayed above. \n
        If you change the date, press the diary button at the top of the page again to view the entries for the updated date. \n
        Click on any of the entries to update or delete them. Click on the "Add New Entry" button at the bottom to add a new entry to your diary. The app will automatically take you to the relevant page to add entries for whatever diary is currently displayed. Change the relevant date and time on that page, and add your entry before clicking "Add New Entry".
    </string>
    <!-- Stats -->
    <string name="statsEatingCheck">Show Eating Checkpoints Over Time</string>
    <string name="statsMedicationCheck">Show Medication Over Time</string>
    <string name="statsExerciseCheck">Show Exercise Over Time</string>
    <string name="statsBloodSugarCheck">Show Blood Sugar Levels Over Time</string>

    <string name="foodButtonText">Food</string>
    <string name="medicationButtonText">Medication</string>
    <string name="exerciseButtonText">Exercise</string>
    <string name="bloodSugarButtonText">Blood Sugar</string>
    <string name="insulinButtonText">Insulin</string>
    <string name="addNewEntryButtonText">Add New Entry</string>
    <string name="updateEntryButtonText">Update Entry</string>
    <string name="deleteEntryButtonText">Delete Entry</string>

    <string name="customValidationError">Error: Please enter in valid data</string>
    <string name="refreshDataButtonText">Refresh Data</string>
    <string name="bloodSugarReadingDefaultText">Update Blood Sugar Reading Here</string>
    <string name="foodDefaultText">Update Food Here</string>
    <string name="exerciseDefaultText">Update Exercise Here</string>
...
