...
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerActivityTextViewLoginText" />

    <EditText
        android:id="@+id/registerActivityEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerActivityEditTextEmailAddress"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerActivityTextViewPassword" />

    <EditText
        android:id="@+id/registerActivityPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerActivityEditTextPassword"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerActivityTextViewRePassword" />


    <EditText
        android:id="@+id/registerActivityRePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registerActivityEditTextRePassword"
        android:inputType="textPassword"/>

    <Button
...
