<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateInsulinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/insulinDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DD"
            android:gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/insulinMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MM"
            android:gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/insulinYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="YY"
            android:gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/insulinHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="HH"
            android:gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/insulinMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MM"
            android:gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <Spinner
            android:id="@+id/amPMSelector"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/insulinReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/insulinDefaultText"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/updateinsulinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/updateEntryButtonText" />

        <Button
            android:id="@+id/deleteinsulinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deleteEntryButtonText" />
    </LinearLayout>


</LinearLayout>