...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/medicationButtonText"
                android:textSize="12sp" />

            <Button
                android:id="@+id/insulinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/insulinButtonText"
                android:textSize="12sp" />
        </LinearLayout>
...
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flContainer"
        android:layout_width="match_parent"
        android:layout_height="470dp">

    </FrameLayout>

    <Button
        android:id="@+id/addEntryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewEntryButtonText" />


</LinearLayout>
